# peeps_scheduler

./: .gitattributes  .gitignore  .gitmodules  .markdownlint-cli2.jsonc  .prettierrc  README.md  availability_report.py  changelog.md  constants.py  csv_loader.py  data_manager.py  db_imports.py  file_io.py  globals.py  logging_config.py  main.py  managers.py  models.py  package-lock.json  package.json  perms.py  pyproject.toml  pytest.ini  reports.py  requirements-dev.txt  scheduler.py  test_events.json  test_peeps.json  utils.py
.githooks/: post-checkout  pre-commit
AppsScript/: DateParser.gs  Main.gs  novice_peeps_march_responses_output.json
db/: README.md  backup.py  import_from_csv.py  import_period_data.py  migrate.py  period_report.py  raw_import.py  schema.sql  snapshot_generator.py  transform_raw_to_normalized.py  validate.py
db/migrations/: 001_initial_schema.sql  001_raw_import_tables.sql  002_add_active_column.sql  002_add_data_quality_tracking.sql  003_add_normalized_tables.sql  003_remame_tables_to_plural.sql  004_update_response_table.sql  005_add_peep_order_snapshots.sql  005_rename_scheduleperiod_columns.sql  006_add_active_to_snapshots.sql  006_add_peepordersnapshot_table_and_migrate.sql  007_add_slug_to_scheduleperiods.sql  007_fix_max_sessions_check_constraint.sql  008_enforce_not_null_emails.sql  009_add_proposed_status_to_events.sql  011_backup_corrupted_snapshots.sql  012_update_period_status_active_to_scheduled.sql  README.md
docs/: domain-context.md  known-issues-baseline.md  logging.md  test-architecture.md  testing.md
docs/architecture/: baseline-v1-overview.md  database-import.md
json_tests/: og_test_case_peeps.json  test_peeps_bad.json  test_peeps_good.json  test_peeps_weird.json
scripts/: check-md.sh  create_repo_zip.py  data_cli.py  import_period_runner.py  init-hooks.sh  setup.sh
src/peeps_scheduler/: availability_report.py  constants.py  data_manager.py  file_io.py  logging_config.py  main.py  models.py  scheduler.py  utils.py
src/peeps_scheduler.egg-info/: PKG-INFO  SOURCES.txt  top_level.txt
src/peeps_scheduler/db/: README.md  backup.py  import_period_data.py  migrate.py  snapshot_generator.py  validate.py
src/peeps_scheduler/db/migrations/: 004_fix_peeps_table_and_autoincrement.sql  010_add_peep_id_to_assignment_changes.sql  013_create_partnership_requests_table.sql
src/peeps_scheduler/scripts/: create_repo_zip.py  data_cli.py
tests/: __init__.py  conftest.py  pytest.ini  test_availability_report.py  test_availability_report_integration.py  test_data_manager.py  test_db_import.py  test_dual_role_assignment.py  test_event.py  test_event_model.py  test_event_sequence.py  test_file_io.py  test_integration.py  test_logging_config_integration.py  test_main_cli.py  test_min_interval_days.py  test_models.py  test_peep.py  test_scheduler.py  test_snapshot_generator_integration.py  test_utils.py  test_utils_scheduler.py  test_validate.py  test_validate_schema.py  test_validation_cli.py
tests/db/: conftest.py  helpers.py  test_managers.py  test_snapshots.py
tests/db/import/: conftest.py  test_assignments.py  test_attendance.py  test_cancellations.py  test_events.py  test_integration.py  test_members.py  test_partnerships.py  test_responses.py  test_snapshots.py
tests/fixtures/: conftest.py  data_specs.py
tests/golden_master_2025_09_sanitized/: members.csv  output.json  responses.csv  results.json
tests/webapp/: conftest.py  test_api.py  test_views.py  test_webapp_smoke.py
webapp/: api.py  main.py  views.py
webapp/templates/: _macros.html  base.html  peeps.html
