[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "peeps-scheduler"
version = "1.1.0"
description = "West Coast Swing scheduling system"
requires-python = ">=3.8"

[tool.setuptools.packages.find]
where = ["src"]

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["src"]
python_files = ["test_*.py"]
python_classes = ["Test*"]
python_functions = ["test_*"]
addopts = [
    "-v",
    "--strict-markers",
    "--tb=short",
	 "--import-mode=importlib",
]
markers = [
    "unit: marks unit tests that test a single component in isolation",
    "db: marks database tests that require SQLite database",
    "integration: marks integration tests that test multiple components together",
    "slow: marks tests as slow (deselect with '-m \"not slow\"')",
    "revisit: marks tests that document current behavior but should be changed in the future",
]

[tool.ruff]
# Target modern Python, adjust if needed
target-version = "py311"
src = ["src"]

# Reasonable line length, plays well with VS Code
line-length = 100
indent-width = 4

# Keep this tight at first. You can always add more later.
lint.select = [
  "E",   # pycodestyle errors
  "F",   # pyflakes (real bugs)
  "I",   # import sorting
  "UP",  # pyupgrade (safe modernizations)
]

lint.ignore = [
  "E203",  # whitespace before ':', conflicts with formatter
  "E501",  # line length (handled by formatter)
]

lint.exclude = [
  ".git",
  ".venv",
  "__pycache__",
  "build",
  "dist",
]

[tool.ruff.format]
quote-style = "double"
skip-magic-trailing-comma = false
line-ending = "auto"


[tool.ruff.lint.isort]
known-first-party = ["peeps_scheduler"]
combine-as-imports = true
lines-between-types = 0
no-lines-before = ["third-party", "first-party", "local-folder"]
