  [build-system]
  requires = ["setuptools>=61.0"]
  build-backend = "setuptools.build_meta"

  [project]
  name = "peeps-scheduler"
  version = "1.1.0"
  description = "West Coast Swing scheduling system"
  requires-python = ">=3.8"

  [tool.setuptools.packages.find]
  where = ["src"]

  [tool.pytest.ini_options]
  testpaths = ["tests"]
  pythonpath = ["src"]
  python_files = ["test_*.py"]
  python_classes = ["Test*"]
  python_functions = ["test_*"]
  addopts = [
      "-v",
      "--strict-markers",
      "--tb=short",
      "--import-mode=importlib",
  ]
  markers = [
      "unit: marks unit tests that test a single component in isolation",
      "db: marks database tests that require SQLite database",
      "integration: marks integration tests that test multiple components together",
      "slow: marks tests as slow (deselect with '-m \"not slow\"')",
      "revisit: marks tests that document current behavior but should be changed in the future",
  ]

  [tool.ruff]
  target-version = "py311"
  src = ["src"]
  line-length = 100

  [tool.ruff.lint.isort]
  known-first-party = ["peeps_scheduler"]
